--- a/posts/writing/link-previews2.mdx
+++ b/posts/writing/link-previews2.mdx
@@ -107,7 +107,7 @@ If you have the same need that I had and you have some time for development and 
 
 ---
 
-If you are looking for a simpler solution, there is _Microlink's API_, which I mentioned above. One strong point that it has is the _ease of use_, since you only need to build the query params and that's it, you will get an image which is going to be cached. You even have the possibility of adding configuration through query parameters, such as `colorScheme`, `waitUntil`, ...
+If you are looking for a simpler solution, there is _Microlink's API_ (probably the most popular solution seen so far for link previews), which I mentioned above. One strong point that it has is the _ease of use_, since you only need to build the query params and that's it, you will get an image which is going to be cached. You even have the possibility of adding configuration through query parameters, such as `colorScheme`, `waitUntil`, ...
 
 However, from my personal experience, trying to screenshot my Twitter/Github account with Microlink ended in _almost blank_ images most of the time.
 
